# auto_trader

./: .gitignore  pyproject.toml
auto_trader/: __init__.py  auto_runner.py  constants.py  logging.py
auto_trader/base/: base_strategy.py  base_trader.py  base_wallet.py
auto_trader/data_fetcher/: __init__.py  gmo_data_fetcher.py  simulator.py
auto_trader/old/: auto_runner.py
auto_trader/old/base/: __init__.py  base_data_fetcher.py
auto_trader/old/strategy/: strategy0.py
auto_trader/old/trader/: gmo_trader.py
auto_trader/old/types/: order.py
auto_trader/old/wallet/: leverage_wallet.py  wallet.py
auto_trader/order/: __init__.py  base_order.py  leverage_order.py  order.py
auto_trader/strategy/: __init__.py  strategy0.py
auto_trader/trader/: __init__.py  gmo_trader.py  trader0.py
auto_trader/types/: __init__.py  tick_data.py  trade_history.py
auto_trader/utils/: __init__.py  feature.py  gmo.py  history.py
auto_trader/wallet/: __init__.py  wallet.py
docker/: Dockerfile  build_docker.sh  docker-compose.yml  entrypoint.sh
notebooks/: 20241110_debug_auto_trade.ipynb  20241117_simple_auto_trade.ipynb
tests/: test_wallet.py
